--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/activity_main_welcome_tv"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/activity_main_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/activity_main_welcome_tv"
-        android:layout_marginHorizontal="@dimen/margin_large_size"
-        android:gravity="center"
-        android:textSize="@dimen/text_normal_size"/>
+        android:layout_height="match_parent"
+        android:name="fr.lleotraas.myapplication.fragment.MainFragment"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/activity_main_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_welcome_tv"
-        android:layout_margin="24dp"
-        android:text="@string/activity_main_btn_text"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
