--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <include
+        android:id="@+id/activity_main_toolbar"
+        layout="@layout/toolbar"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/activity_main_fragment"
         android:layout_width="match_parent"
