--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,10 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activity.WeatherActivity">
 
-   <androidx.fragment.app.FragmentContainerView
-       android:id="@+id/activity_weather_container"
+   <com.google.android.material.appbar.AppBarLayout
+       android:id="@+id/activity_weather_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:name="fr.lleotraas.myapplication.fragment.WeatherFragment"/>
+       android:background="@color/white"
+       android:orientation="vertical">
+
+      <include
+          android:id="@+id/activity_weather_toolbar"
+          layout="@layout/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>
+
+      <androidx.fragment.app.FragmentContainerView
+          android:id="@+id/activity_weather_container"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:name="fr.lleotraas.myapplication.fragment.WeatherFragment"/>
+
+   </com.google.android.material.appbar.AppBarLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
