--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/fragment_main_welcome_tv"
         android:layout_margin="24dp"
-        android:text="@string/activity_main_btn_text"/>
+        android:text="@string/activity_main_btn_text"
+        android:background="@color/primary"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
